; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_x_ctx.c_gfx_ctx_x_swap_interval.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_x_ctx.c_gfx_ctx_x_swap_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@x_api = common dso_local global i32 0, align 4
@g_x11_dpy = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @gfx_ctx_x_swap_interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_ctx_x_swap_interval(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %5, align 8
  %8 = load i32, i32* @x_api, align 4
  switch i32 %8, label %12 [
    i32 130, label %9
    i32 129, label %9
    i32 128, label %10
    i32 131, label %11
  ]

9:                                                ; preds = %2, %2
  br label %13

10:                                               ; preds = %2
  br label %13

11:                                               ; preds = %2
  br label %12

12:                                               ; preds = %2, %11
  br label %13

13:                                               ; preds = %12, %10, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
